recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	
  avance(length);
  gauche(angle);
  if (step!=1)
  spiral(steps-1,angle,length+increment,increment)
}
	
